src/styles/index.css
body {
  background: url("../assets/bk.webp") center no-repeat fixed;
  background-size: cover;
  font-family: "Ubuntu", serif;
  font-style: normal;
}

.container {
  max-width: 900px;
  background: rgba(255, 255, 255, 0.23);
  padding: 20px;
  margin: 50px auto;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  text-align: center;
}

h1 {
  align-items: center;
  color: black;
  font-size: 2.8rem;
  margin-bottom: 10px;
}

h2 {
  color: black;
  font-size: 1.5rem;
  margin-bottom: 15px;
}

hr {
  border: 0;
  height: 1px;
  background: linear-gradient(to right, 
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 1) 20%,
    rgba(255, 255, 255, 1) 80%,
    rgba(255, 255, 255, 0) 100%
  );
  margin: 30px auto;
  width: 80%;
}

.links {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
  width: 100%;
}

.links a, 
.spotify-embeds iframe{
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 15px;
  background: rgba(255, 255, 255, 0.493);
  color: black;
  text-decoration: none;
  border-radius: 9.3px;
  transition: 0.3s;
  width: 100%;
  max-width: 500px;
  font-size: 1.2em;
  font-weight: bold;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  vertical-align: middle;
}

.links a:hover {
  background: rgba(255, 255, 255, 0.705);
  transform: scale(1.05);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
}

.links a i, .links b i {
  font-size: 1.5em;
  margin-right: 33px;
  line-height: 0;
  vertical-align: middle;
}

.spotify-embeds {
  display: flex;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  width: 100%;
}

.spotify-embeds iframe {
  border-radius: 12px;
  width: 100%;
  max-width: 500px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease;
}

.spotify-embeds iframe:hover {
  transform: scale(1.03);
}


@media (max-width: 560px) {
  .container {
    width: 83%;
    margin: 20px auto;
    padding: 15px;
  }

  h1 {
    font-size: 1.8rem;
  }

  h2 {
    font-size: 1.3rem;
  }

  .links a,
  .spotify-embeds iframe {
    width: 100%;
    font-size: 1.1em;
  }
}

